--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "react-scripts": "3.4.1",
     "request-promise-native": "^1.0.8"
   },
+  "proxy": "http://localhost:8080",
   "scripts": {
-    "start": "react-scripts start",
+    "now-start": "serve --single ./build",
+    "dev-start": "react-scripts start",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
