--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.3.4",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.5.0",
     "express": "^4.17.1",
     "express-server": "^0.7.0",
     "http-proxy-middleware": "^1.0.4",
@@ -16,6 +17,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "reactstrap": "^8.4.1",
     "request-promise-native": "^1.0.8",
     "styled-components": "^5.1.1"
   },
