--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "3.4.1",
     "reactstrap": "^8.4.1",
     "request-promise-native": "^1.0.8",
+    "serve": "^11.3.2",
     "styled-components": "^5.1.1"
   },
   "proxy": "http://localhost:8080",
